[package]
name = "tls_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
mio = {version = "0.8", features = ["os-poll","net","os-ext"]}
ctrlc = "3.3.0"
colored = "2.0"